[DEPLOY] Fix CORS: add config cors